# atheer-ct-api

./: .env  Cargo.toml
migrations/: 20250719192806_create_users_table.sql
src/: main.rs
src/controllers/: auth_controller.rs
src/models/: response.rs  user.rs
src/routes/: auth.rs
