[package]
name = "atheer-ct-api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = [
    "mysql",
    "runtime-tokio-native-tls",
    "macros",
    "migrate",
] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
bcrypt = "0.15"
validator = { version = "0.16", features = ["derive"] }
regex = "1"
actix-cors = "0.7.1"
